paper figures notebook with toc

--- a/notebooks/paper-figures.ipynb
+++ b/notebooks/paper-figures.ipynb
@@ -320,7 +320,7 @@
    "id": "986e819b-2978-49f9-95ad-77870140eb4c",
    "metadata": {},
    "source": [
-    "## Boundary"
+    "## Label Boundary"
    ]
   },
   {
@@ -395,7 +395,7 @@
    "id": "3dc03e47-a469-4f64-ab26-e30161378ebf",
    "metadata": {},
    "source": [
-    "## Results Plots - Calibration Condition"
+    "## Results Figure - Calibration Condition"
    ]
   },
   {
@@ -437,7 +437,7 @@
    "id": "4c0618b1-bc51-4f68-acee-ec181a4c3bd5",
    "metadata": {},
    "source": [
-    "## All Conditions"
+    "## Results Figure - All Conditions"
    ]
   },
   {
