explanation for input data expectations

--- a/notebooks/faim-scores-example.ipynb
+++ b/notebooks/faim-scores-example.ipynb
@@ -129,6 +129,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3e918fe1-da1b-40d8-ae8e-96547dafc762",
+   "metadata": {},
+   "source": [
+    "Note, for calculating [FAIM Scores](#get-faim-scores), the code currently requires a Pandas DataFrame with columns called `group`, `pred_score`, and `groundTruthLabel` (values 0 or 1). This corresponds to FAIM only requiring the sensitive group labels, model predictions, ground truth, respectively.\n",
+    "\n",
+    "Contributions to relax this requirement or wrap FAIM into a more scikit-learn or fairlearn like interface would be much appreciated. For now, the Pandas DataFrame remains for backwards compatibility. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c54d49a2-00d7-475f-9db6-79402a01e912",
    "metadata": {},
    "source": [
